[package]
name = "maxwell-fix"
version = "1.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.19.0"
config = "0.14.0"
anyhow = "1.0.83"
serde = "1.0.202"
serde_json = "1.0.117"
log = "0.4.21"
flexi_logger = "0.28.1"
sysinfo = "0.30.13"

[build-dependencies]
static_vcruntime = "2.0"