[package]
name = "maxwell-fix"
version = "1.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.20"
config = "0.15"
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
flexi_logger = "0.29"
auto-launch = "0.5.0"
single-instance = "0.3.3"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59.0", features = ["Win32_System_Console"] }

[target.'cfg(windows)'.build-dependencies]
static_vcruntime = "2.0"